--- a/frontend/src/shared/ui/input/input.module.scss
+++ b/frontend/src/shared/ui/input/input.module.scss
@@ -1,3 +1,11 @@
 .root {
-  border-radius: 5px;
+  border-radius: 12px;
+  padding: 12px;
+  border: 1px solid #e5e7ea;
+  background-color: #f9fafb;
+  font-size: 16px;
+  line-height: 24px;
+  &:focus {
+    outline: none;
+  }
 }
