--- a/frontend/src/widgets/dashboard-header/ui/header.module.scss
+++ b/frontend/src/widgets/dashboard-header/ui/header.module.scss
@@ -1,3 +1,23 @@
 .wrapper {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.inputWrapper {
+  margin-left: 25px;
+}
+
+.input {
+  width: 300px;
+}
+
+.searchWrapper {
+  display: flex;
+  margin-right: 40px;
+}
+
+.settingsWrapper {
+  display: flex;
+  gap: 25px;
 }
