--- a/frontend/src/app/styles/index.scss
+++ b/frontend/src/app/styles/index.scss
@@ -13,6 +13,8 @@
 .app {
   font-size: 14px;
   line-height: 20px;
+  min-height: 100vh;
+  min-width: 100vw;
   background-color: var(--background-color);
   color: var(--text-color);
 }
