--- a/frontend/src/app/styles/index.scss
+++ b/frontend/src/app/styles/index.scss
@@ -17,4 +17,6 @@
   min-width: 100vw;
   background-color: var(--background-color);
   color: var(--text-color);
+  display: flex;
+  flex-direction: column;
 }
