--- a/frontend/src/widgets/dashboard-layout/ui/layout/layout.module.scss
+++ b/frontend/src/widgets/dashboard-layout/ui/layout/layout.module.scss
@@ -2,4 +2,16 @@
   min-height: 100%;
   min-width: 100%;
   padding: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  display: flex;
+  flex: 1;
+}
+
+.content {
+  flex: 1;
 }
